--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Simple Website</title>
+<meta charset="UTF-8">
+<title>Minecraft 2 Download (Totally Real)</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #1b1b1b;
+    color: white;
+    text-align: center;
+    padding: 50px;
+  }
+  .container {
+    background: #2d2d2d;
+    padding: 30px;
+    border-radius: 15px;
+    width: 500px;
+    margin: auto;
+    box-shadow: 0 0 20px #000;
+  }
+  button {
+    background: #00c853;
+    color: white;
+    padding: 15px 25px;
+    border: none;
+    font-size: 18px;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+  button:hover {
+    background: #00e676;
+  }
+  .small-text {
+    margin-top: 20px;
+    color: #aaa;
+    font-size: 12px;
+  }
+</style>
 </head>
 <body>
-  <h1>Hello, welcome to my website!</h1>
-  <p>This site is hosted on GitHub Pages.</p>
+  <div class="container">
+    <h1>Minecraft 2 Download</h1>
+    <p>Yes. It's real. Totally. Absolutely. Trust me.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/en/5/51/Minecraft_cover.png" width="250" style="border-radius: 10px;">
+
+    <h2>Download for FREE</h2>
+    <button onclick="alert('Error: Your computer is too awesome to handle Minecraft 2 😎')">
+      Download Minecraft 2
+    </button>
+
+    <p class="small-text">Not affiliated with Mojang. This is a joke. Please don’t sue me.</p>
+  </div>
 </body>
 </html>
