--- a/index.html
+++ b/index.html
@@ -1,55 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Minecraft 2 Download (Totally Real)</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Minceraft — Play the Blocks</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #1b1b1b;
-    color: white;
-    text-align: center;
-    padding: 50px;
+  :root{
+    --bg:#1f1f1f;
+    --panel:#2f2f2f;
+    --accent:#ff9b1a;
+    --muted:#9aa0a6;
+    --text:#e9e9e9;
+    --container-width:1100px;
   }
-  .container {
-    background: #2d2d2d;
-    padding: 30px;
-    border-radius: 15px;
-    width: 500px;
-    margin: auto;
-    box-shadow: 0 0 20px #000;
+  html,body{height:100%;margin:0;font-family: "Segoe UI", Roboto, Arial, sans-serif;background: #151515;}
+  /* subtle tile texture (CSS) */
+  body::before{
+    content:"";
+    position:fixed; inset:0; z-index:0;
+    background-image:
+      linear-gradient(transparent 95%, rgba(0,0,0,0.03) 95%),
+      linear-gradient(90deg, transparent 95%, rgba(255,255,255,0.02) 95%);
+    background-size:24px 24px, 24px 24px;
+    pointer-events:none;
   }
-  button {
-    background: #00c853;
-    color: white;
-    padding: 15px 25px;
-    border: none;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
+
+  .wrap{max-width:var(--container-width);margin:28px auto;padding:24px;position:relative;z-index:1;}
+  /* header */
+  .header{display:flex;align-items:center;justify-content:space-between;margin-bottom:18px;}
+  .logo{
+    display:flex;align-items:center;gap:14px;
   }
-  button:hover {
-    background: #00e676;
+  .logo .logo-mark{
+    /* using uploaded image as decorative mark */
+    width:260px;height:50px;background-image:url("/mnt/data/f2c97fa2-977b-4e79-8dfa-de5527227456.png");
+    background-size:cover;background-position:center;border-radius:4px;box-shadow: 0 2px 6px rgba(0,0,0,0.6);
   }
-  .small-text {
-    margin-top: 20px;
-    color: #aaa;
-    font-size: 12px;
+  nav.mainnav{display:flex;gap:18px;align-items:center;color:var(--muted);font-weight:600;}
+  nav.mainnav a{color:var(--muted);text-decoration:none;padding:6px 8px;}
+  nav.mainnav a:hover{color:var(--text)}
+  .auth-links{color:#9b7fd6;font-weight:700;}
+
+  /* main two-column */
+  .main{
+    display:grid;grid-template-columns:1fr 320px;gap:28px;align-items:start;
+  }
+  .left-panel{
+    background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(0,0,0,0.06));
+    padding:22px;border-radius:6px;color:var(--text);
+    box-shadow:inset 0 1px 0 rgba(255,255,255,0.02);
+  }
+  .hero-video{
+    width:100%;height:260px;border-radius:6px;background:#0e0e0e;display:flex;align-items:center;justify-content:center;position:relative;
+    overflow:hidden;
+  }
+  .hero-video .play{
+    width:72px;height:72px;background:rgba(0,0,0,0.55);border-radius:10px;display:flex;align-items:center;justify-content:center;color:#fff;font-size:28px;cursor:pointer;
+    border:4px solid rgba(255,255,255,0.03);
+  }
+  .content-text{margin-top:18px;line-height:1.55;color:var(--muted);font-size:15px;}
+  .content-text a{color:#6fb0ff;text-decoration:none;}
+
+  /* right column panel */
+  .right-panel{
+    background:var(--panel);padding:22px;border-radius:6px;color:var(--text);text-align:center;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.6);
+  }
+  .character-stack{display:flex;flex-direction:column;align-items:center;gap:18px;margin-bottom:6px;}
+  /* blocky character placeholders (inspired by the originals but distinct) */
+  .char-row{display:flex;gap:12px;align-items:flex-end;justify-content:center;}
+  .char{
+    width:84px;height:120px;background:linear-gradient(#6aa6ff,#3a77c0);
+    border-radius:6px;display:flex;flex-direction:column;align-items:center;justify-content:flex-end;
+    box-shadow: 0 6px 0 rgba(0,0,0,0.35);position:relative;
+    transform:skewY(-2deg);
+  }
+  .char .head{width:72px;height:56px;background:#d6b07a;border:4px solid #7a4f2e;position:absolute;top:-36px;border-radius:4px;}
+  .char.pig .head{background:#f19aa0;border:4px solid #b0666c;}
+  .char.sheep .head{background:#f5f6f7;border:4px solid #cfcfcf;}
+  .char .body{height:60px;width:100%;border-top-left-radius:6px;border-top-right-radius:6px;}
+  .char.pig .body{background:linear-gradient(#f07b8a,#c84f63)}
+  .char.sheep .body{background:linear-gradient(#ffffff,#dddddd)}
+  .right-panel h2{margin:2px 0 8px 0;color:#ffe9c9}
+  .buy-btn{
+    display:inline-block;padding:14px 36px;background:var(--accent);color:#fff;border-radius:8px;text-decoration:none;font-weight:800;
+    box-shadow: 0 6px 0 rgba(0,0,0,0.35);margin-top:6px;
+  }
+  .small-links{margin-top:12px;color:var(--muted);font-size:13px}
+  .small-links a{color:#9be0ff;text-decoration:none}
+
+  /* footer-ish small */
+  .small-note{margin-top:22px;color:var(--muted);font-size:13px;text-align:left}
+
+  /* responsive */
+  @media (max-width:980px){
+    .wrap{padding:12px}
+    .main{grid-template-columns:1fr;gap:18px;}
+    .right-panel{order:2}
   }
 </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Minecraft 2 Download</h1>
-    <p>Yes. It's real. Totally. Absolutely. Trust me.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/en/5/51/Minecraft_cover.png" width="250" style="border-radius: 10px;">
+  <div class="wrap">
+    <header class="header">
+      <div class="logo">
+        <div class="logo-mark" title="Minceraft sample header image"></div>
+        <div style="text-align:left">
+          <div style="font-size:20px;font-weight:800;color:#fff;letter-spacing:1px">Minceraft</div>
+          <div style="font-size:12px;color:var(--muted)">Blocky adventures — totally not official</div>
+        </div>
+      </div>
 
-    <h2>Download for FREE</h2>
-    <button onclick="alert('Error: Your computer is too awesome to handle Minecraft 2 😎')">
-      Download Minecraft 2
-    </button>
+      <div style="display:flex;align-items:center;gap:18px">
+        <nav class="mainnav">
+          <a href="#">Home</a>
+          <a href="#">Game</a>
+          <a href="#">Community</a>
+          <a href="#">Store</a>
+          <a href="#">Profile</a>
+          <a href="#">Help</a>
+        </nav>
+        <div class="auth-links">Log In | Register</div>
+      </div>
+    </header>
 
-    <p class="small-text">Not affiliated with Mojang. This is a joke. Please don’t sue me.</p>
+    <main class="main">
+      <section class="left-panel">
+        <div class="hero-video" id="hero">
+          <!-- You can replace with an iframe embed if you want an actual video -->
+          <div class="play" onclick="showDemo()">▶</div>
+        </div>
+
+        <div class="content-text">
+          <p><strong>Minceraft</strong> is a game about breaking and placing blocks. At first, people built structures to protect against nocturnal monsters, but as the game grew players worked together to create wonderful, imaginative things.</p>
+
+          <p>It can also be about adventuring with friends or watching the sun rise over a blocky ocean. Brave players battle terrible things in other dimensions, which are more scary than pretty. You can also visit a land of mushrooms if it sounds more like your cup of tea.</p>
+
+          <p class="small-note">You can buy <a href="#">Minceraft for PC/Mac</a>. Pocket Edition is available for iOS and Android. In total, millions of players enjoy Minceraft's blocky world every day.</p>
+        </div>
+      </section>
+
+      <aside class="right-panel">
+        <div class="character-stack">
+          <div style="color:var(--muted);font-size:13px">Characters</div>
+          <div class="char-row" aria-hidden="true">
+            <div class="char" style="transform:translateY(6px)">
+              <div class="head"></div>
+              <div class="body"></div>
+            </div>
+            <div class="char pig" style="transform:translateY(10px)">
+              <div class="head"></div>
+              <div class="body"></div>
+            </div>
+            <div class="char sheep" style="transform:translateY(4px)">
+              <div class="head"></div>
+              <div class="body"></div>
+            </div>
+          </div>
+        </div>
+
+        <h2>Buy Now!</h2>
+        <a class="buy-btn" href="#" onclick="fakeBuy(event)">Buy Minceraft</a>
+
+        <div class="small-links">
+          <div><a href="#">or play the demo</a></div>
+          <div style="margin-top:8px">Play in browser | <a href="#">Download</a></div>
+        </div>
+
+        <div class="small-note" style="margin-top:16px">
+          <strong>Disclaimer:</strong> <span style="color:var(--muted)">Minceraft is a parody site and not affiliated with Mojang or Microsoft. This page is for jokes and visual demonstration only.</span>
+        </div>
+      </aside>
+    </main>
   </div>
+
+<script>
+  function showDemo(){
+    // simple fake demo modal (alert-style)
+    alert("Demo: This is a parody demo for Minceraft — no downloads here!");
+  }
+  function fakeBuy(e){
+    e.preventDefault();
+    alert("Thanks for your interest! This is a joke parody page — no purchase is available.");
+  }
+</script>
 </body>
 </html>
